--- a/pom.xml
+++ b/pom.xml
@@ -19,13 +19,31 @@
 		</plugins>
 	</build>
 
-	<dependencies>
-		<dependency>
-			<groupId>org.apache.kafka</groupId>
-			<artifactId>kafka_2.11</artifactId>
-			<version>0.10.1.2.6.4.0-91</version>
-		</dependency>
-	</dependencies>
+	<profiles>
+		<profile>
+			<id>kafka_0.10</id>
+			<dependencies>
+				<dependency>
+					<groupId>org.apache.kafka</groupId>
+					<artifactId>kafka_2.11</artifactId>
+					<version>0.10.1.2.6.4.0-91</version>
+				</dependency>
+			</dependencies>
+		</profile>
+		<profile>
+			<id>kafka_1.0</id>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
+			<dependencies>
+				<dependency>
+					<groupId>org.apache.kafka</groupId>
+					<artifactId>kafka_2.11</artifactId>
+					<version>1.0.0.3.1.0.0-563</version>
+				</dependency>
+			</dependencies>
+		</profile>
+	</profiles>
 
 	<repositories>
 		<repository>
@@ -39,6 +57,5 @@
 			<url>http://repo.hortonworks.com/content/repositories/releases/</url>
 		</repository>
 	</repositories>
-
 
 </project>
